# Geo-FNO

./: pyproject.toml
elasticity/: elas_geofno.py  elas_geofno_fem.py  elas_geofno_v2.py  elas_geofno_v2_fem.py  elas_graph.py
