[tool.poetry]
name = "geo-fno"
version = "0.1.0"
description = ""
authors = ["chyalexcheng <chyalexcheng@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_fno"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
ipykernel = "*"
matplotlib = "^3.6.0"
h5py = "^3.10.0"
scikit-learn = "^1.4.1.post1"
torch-geometric = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
